Javascript Constant Variable

--- a/index.html
+++ b/index.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript</title>
 </head>
+
 <body>
     <h1> Javascript</h1>
 
 
+
     <script>
-        
-        let name = "John";
-        let surname = "Doe";
-        
-        console.log(name);
-        console.log(surname);
+
+        // Let Variable
+
+        // let name = "John";
+        // let surname = "Doe";
+
+        // console.log(name);
+        // console.log(surname);
+
+        // let age = 11;
+        // console.log(age); // outputs 11 to the console
+
+        // age =54;
+
+        // console.log(age);  //output 54 to the console
+
+        // Const Variable
+        const pi = 3.14;
+        pi = 10;
+        console.log(pi);
+
     </script>
 
 </body>
-</html>
 
+</html>
