Javascript Number Expressions

--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
         // console.log(age);  //output 54 to the console
 
         // Const Variable
-        const pi = 3.14;
-        pi = 10;
-        console.log(pi);
+        // const pi = 3.14;
+        // pi = 10;
+        // console.log(pi);
+        
 
+        // Number
+        let math = (3+2) - 76 * (1+1); //PEMDAS Rule
+        console.log(math);
     </script>
 
 </body>
