--- a/index.html
+++ b/index.html
@@ -36,8 +36,30 @@
         
 
         // Number
-        let math = (3+2) - 76 * (1+1); //PEMDAS Rule
-        console.log(math);
+        // let math = (3+2) - 76 * (1+1); //PEMDAS Rule
+        // console.log(math);
+
+
+        //Try the following 
+        // console.log(23+97)
+        // console.log(122+45+80+57+120+45);
+
+        // let x = 4+6+9;
+        // let y = 77;
+        // let z = x/y;
+
+        // console.log(z);
+
+        // let a = 10;
+        // console.log(9*a);
+
+        // let b = 7 *a;
+        // console.log(b);
+
+        const max =57;
+        let actual = max -13;
+        let percentage = actual/max;
+        console.log(percentage);
     </script>
 
 </body>
