--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-    <script>
+    <!-- <script>
 
         // Let Variable
 
@@ -58,10 +58,28 @@
 
         const max =57;
         let actual = max -13;
-        let percentage = actual/max;
+        let percentage = actual/max;    
         console.log(percentage);
-    </script>
+    </script> -->
 
+
+    <script>
+        // let admin, name;
+
+        // name = "John";
+
+        // admin = name;
+
+        // alert(admin);
+
+
+        let ourPlanetName ="Earth";
+        alert(ourPlanetName);
+
+
+        let currentUserName = "Michael";
+        alert(currentUserName);
+    </script>
 </body>
 
 </html>
