--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </script> -->
 
 
-    <script>
+    <!-- <script>
         // let admin, name;
 
         // name = "John";
@@ -79,6 +79,82 @@
 
         let currentUserName = "Michael";
         alert(currentUserName);
+    </script> -->
+
+    <p id="demo"></p>
+    <script>
+        // let x = 100 + 50;
+        // document.getElementById("demo").innerHTML = x;  //Output to HTML Page
+
+
+        // let a =100;
+        // let b =50;
+        // let x = a+b;
+
+        // document.getElementById("demo").innerHTML=x;
+
+
+        // let a = 3 ;
+        // let x = (100+50) * a ;
+
+        // document.getElementById("demo").innerHTML= x;
+
+
+        // Adding
+        // let x = 5;
+        // let y = 2 ;
+        // let z = x+y;
+        // document.getElementById("demo").innerHTML=z;
+
+        // Subtraction
+        // let x = 5;
+        // let y= 2;
+        // let z = x - y;
+        // document.getElementById("demo").innerHTML = z;
+
+
+        // Multiplication
+        // let x = 5;
+        // let y = 2;
+        // let z = x *y;
+        // document.getElementById("demo").innerHTML = z;
+
+        // Division
+        // let x = 5;
+        // let y = 2;
+        // let z = x /y;
+        // document.getElementById("demo").innerHTML = z;
+
+        // Remainder
+        // let x = 5;
+        // let y = 2;
+        // let z = x % y;
+        // document.getElementById("demo").innerHTML = z;
+
+        // Increment
+        // let x = 5;
+        // x++;
+        // let z = x;
+        // document.getElementById("demo").innerHTML = z;
+
+        // Decrement
+        // let x = 5;
+        // x--;
+        // let z = x;
+        // document.getElementById("demo").innerHTML = z;
+
+        // Exponentiation
+        // let x = 5 ;
+        // let z = x ** 2;
+        // document.getElementById("demo").innerHTML= z;
+
+
+        // Operator Precedence
+        // let x = 100+50 * 3; PEMDAS Rule
+        // let x = (100+50) * 3; PEMDAS Rule
+        // let x = 100 + 50 - 3 ; Addition & Subtraction or Subtraction & Addition - Left to Right
+        // let x = 100 / 50 * 3; Multiplication & Division or Division & Multiplication - Left to Rights
+        // document.getElementById("demo").innerHTML = x;
     </script>
 </body>
 
