--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         document.getElementById("demo1").innerHTML = x + "" + y; // Concatenate
      </script> -->
 
-    <p id="demo"></p>
+    <!-- <p id="demo"></p> -->
     <!-- <script>
         // Strings
         // let  x= "10";
@@ -280,7 +280,7 @@
         // document.getElementById("demo").innerHTML = typeof x;
     </script> -->
 
-    <script>
+    <!-- <script>
         // Infinity
         // let myNumber = 2;
         // let txt = "";
@@ -347,8 +347,101 @@
         // // y is an object
         // let y = new Number(500);
         // document.getElementById("demo").innerHTML = (x === y);
-    </script>
+    </script> -->
 
+
+
+
+    <!-- TYPE OF NUMBERS -->
+
+    <!-- <h1 id="sample"></h1> -->
+    <!-- <script>
+
+        // Type of Numbers
+        // const myInt = 5;
+        // const myFloat = 6.667;
+        // console.log(typeof myInt);
+        // console.log(typeof myFloat);
+
+        // Rounded Decimals
+        // const lotsofDecimal = 1.766584958675746364;
+        // lotsofDecimal;
+        // const twoDecimalPlaces = lotsofDecimal.toFixed(2);
+        // console.log(twoDecimalPlaces);
+
+        // Convert to number data types
+        // let myNumber = "74";
+        // myNumber = Number(myNumber) + 3;
+        // console.log(myNumber);
+
+        // Arithmetic Operators
+        // let x = 10 + 7;
+        // let y = 9 * 8;
+        // let z = 60 % 3 ;
+        // console.log(x,y,z);
+
+        // const num1 = 10;
+        // const num2 = 50;
+        // let x = 9 * num1;
+        // let y = num1 **3;
+        // let z = num2 / num1;
+        // console.log(x,y,z);
+
+
+        // let a = 5+10+3;
+        // let b = (num2 % 9) * num1;
+        // let c = num2 + num1 / 8 +2 ;
+        // console.log(c);
+
+
+        // let guessCount = 3;
+        // guessCount++;
+        // console.log(guessCount);
+
+
+        // Increment and Decrement
+        // let num1= 4;
+        // num1++;
+        // console.log(num1);
+
+        // let num2 = 6;
+        // num2--;
+        // console.log(num2);
+
+
+        // Assignment Operators
+        let x = 3;
+        let y = 4;
+        x += y;
+        console.log(x);
+
+
+    </script> -->
+
+    <!-- Active learning: sizing a canvas box -->
+    <!-- https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API -->
+
+
+    <!-- Comparison Operators -->
+    <button>Start Machine</button>
+    <p>The machine is stopped</p>
+
+    <script>
+        const btn = document.querySelector("button");
+        const txt = document.querySelector("p");
+
+        btn.addEventListener("click",updateBtn);
+        
+        function updateBtn(){
+            if (btn.textContent === "Start Machine"){
+                btn.textContent = "Stop Machine";
+                txt.textContent = "The machine has started!";
+            } else {
+                btn.textContent = "Star Machine";
+                txt.textContent = "The machine is stopped.";
+            }
+        }
+    </script>
 </body>
 
 </html>
